--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -84,7 +84,7 @@ select {
     --company-danger-light: #FF7A7A;
     --company-background: #FCFCFC;
 
-    --mdc-checkbox-state-layer-size: 36px;
+    --mat-checkbox-state-layer-size: 36px;
     --company-small-font: 0.8rem;
     --company-medium-font: 0.9rem;
     --company-monospace-font: ui-monospace, "SF Mono", "Cascadia Mono", "Roboto Mono", Consolas, monospace;
